style: header setup

--- a/src/components/AluxInfo.astro
+++ b/src/components/AluxInfo.astro
@@ -1,4 +1,4 @@
-<article class="p-6">
+<article id="alux-info" class="p-6">
   <h2 class="text-3xl">Aluxes in Mayan Folklore</h2>
   <p>...</p>
   <!-- Add illustrations, images or videos -->
