--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,4 +1,4 @@
-<article class="p-6">
+<article id="experience" class="p-6">
   <h2 class="text-3xl">Visiting the Alux Temple</h2>
   <p>...</p>
   <!-- Add images or videos of the temple -->
