--- a/src/components/PracticalInfo.astro
+++ b/src/components/PracticalInfo.astro
@@ -1,4 +1,4 @@
-<article class="p-6">
+<article id="practical-info" class="p-6">
   <h2 class="text-3xl">Practical Information</h2>
   <p>...</p>
   <!-- Add a map or interactive feature -->
