--- a/src/components/AluxInfo.astro
+++ b/src/components/AluxInfo.astro
@@ -1,5 +1,46 @@
-<article id="alux-info" class="p-6">
-  <h2 class="text-3xl">Aluxes in Mayan Folklore</h2>
-  <p>...</p>
-  <!-- Add illustrations, images or videos -->
+<article id="alux-info" class="relative p-6 space-y-6">
+  <div class="absolute inset-0 z-[-1]">
+    <div
+      class="w-full h-full bg-cover bg-center"
+      style="background-image: url('/images/alux-info-background.png'); "
+    >
+      <div class="w-full h-full bg-black bg-opacity-50"></div>
+    </div>
+  </div>
+
+  <h2 class="text-3xl font-semibold text-white">Aluxes in Mayan Folklore</h2>
+
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+    <div class="flex flex-col content-center justify-center ">
+      <p class="text-white">
+        Aluxes are mythical creatures from the Mayan folklore of the Yucatan
+        Peninsula, particularly in Mexico. They are small, impish beings often
+        described as mischievous spirits or supernatural guardians of the
+        natural world. Aluxes are believed to inhabit the forests, caves, and
+        other natural formations.
+      </p>
+      <p class="text-white">
+        In Mayan tradition, Aluxes are considered as the protectors of crops,
+        forests, and bodies of water. They are known to either help or hinder
+        those who encounter them, depending on how they are treated by humans.
+        It is believed that offering gifts or prayers to the Aluxes can bring
+        good fortune, while disrespecting them can lead to mischief and
+        misfortune.
+      </p>
+    </div>
+    <div>
+      <img
+        src="/images/alux-image.jpeg"
+        alt="Alux Illustration"
+        class="aspect-square"
+      />
+    </div>
+  </div>
+<!-- 
+  <div class="aspect-w-16 aspect-h-9">
+    <iframe
+      src="https://www.youtube.com/embed/your-video-id"
+      title="Aluxes in Mayan Folklore"
+      allowfullscreen></iframe>
+  </div> -->
 </article>
