feat: share experience base section setup

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,7 +37,7 @@ import "../styles/tailwind.css";
         >
       </li>
       <li>
-        <a href="#social-sharing" class="text-white hover:text-gray-300"
+        <a href="#share-experience" class="text-white hover:text-gray-300"
           >Share</a
         >
       </li>
