--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,10 @@
 ---
-import HeaderLink from "./HeaderLink.astro";
 import {SITE_TITLE, SITE_DESCRIPTION} from "../consts";
 import "../styles/tailwind.css";
 ---
 
 <header
-  class="bg-cover bg-center bg-no-repeat p-6 flex items-center justify-between"
+  class="bg-cover bg-center bg-no-repeat p-6 flex items-center justify-between fixed z-10 w-screen"
   style="background-image: url('/images/header-background.png')"
 >
   <div class="flex items-center">
@@ -21,7 +20,8 @@ import "../styles/tailwind.css";
       <p class="text-white text-xl">{SITE_DESCRIPTION}</p>
     </div>
   </div>
-  <nav>
+  <!-- Desktop Menu -->
+  <nav class="hidden md:block">
     <ul class="flex items-center space-x-4">
       <li>
         <a href="#alux-info" class="text-white hover:text-gray-300">Aluxes</a>
@@ -43,4 +43,72 @@ import "../styles/tailwind.css";
       </li>
     </ul>
   </nav>
+  <!-- Mobile Menu Button -->
+  <button
+    id="mobile-menu-button"
+    class="md:hidden  bg-white focus:outline-none"
+    onclick="toggleMobileMenu()"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 20 20"
+      fill="currentColor"
+      class="w-6 h-6"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M2 5a1 1 0 011-1h14a1 1 0 110 2H3a1 1 0 01-1-1zm0 6a1 1 0 011-1h14a1 1 0 110 2H3a1 1 0 01-1-1zm1 5a1 1 0 100 2h14a1 1 0 100-2H3z"
+        clip-rule="evenodd"></path>
+    </svg>
+  </button>
 </header>
+
+<!-- Mobile Menu -->
+<div
+  id="mobile-menu"
+  class="fixed top-0 left-0 w-full h-full bg-black  md:hidden z-20"
+  hidden
+>
+  <nav class="bg-dark-400 w-64 h-full p-4">
+    <a
+      href="#alux-info"
+      class="block text-white hover:text-gray-300 py-2 mobile-menu-option"
+      >Aluxes</a
+    >
+    <a
+      href="#experience"
+      class="block text-white hover:text-gray-300 py-2 mobile-menu-option"
+      >Experience</a
+    >
+    <a
+      href="#practical-info"
+      class="block text-white hover:text-gray-300 py-2 mobile-menu-option"
+      >Practical Info</a
+    >
+    <a
+      href="#share-experience"
+      class="block text-white hover:text-gray-300 py-2 mobile-menu-option"
+      >Share</a
+    >
+  </nav>
+</div>
+
+<script>
+  function toggleMobileMenu() {
+    const menu = document.getElementById("mobile-menu");
+    menu.hidden = !menu.hidden;
+    if (!menu.hidden) {
+      menu.style.display = "block";
+    } else {
+      menu.style.display = "none";
+    }
+  }
+
+  const menuButton = document.getElementById("mobile-menu-button");
+  menuButton.addEventListener("click", toggleMobileMenu);
+
+  const menuOptions = document.querySelectorAll(".mobile-menu-option");
+  menuOptions.forEach((option) => {
+    option.addEventListener("click", toggleMobileMenu);
+  });
+</script>
