--- a/src/components/SocialSharing.astro
+++ b/src/components/SocialSharing.astro
@@ -1,6 +1,9 @@
 <section id="share-experience" class="relative p-6 space-y-6">
   <div class="absolute inset-0 z-[-1]">
-    <div class="w-full h-full bg-cover bg-center" style="background-image: url('/images/share-experience-background.png'); ">
+    <div
+      class="w-full h-full bg-cover bg-center"
+      style="background-image: url('/images/share-experience-background.png'); "
+    >
       <div class="w-full h-full bg-black bg-opacity-50"></div>
     </div>
   </div>
@@ -9,23 +12,36 @@
 
   <div class="space-y-6">
     <p class="text-white">
-      We love hearing about the unique experiences and memorable moments visitors have had at the Alux Temple. Share your story, photos, or videos with us and inspire others to explore this fascinating landmark.
+      We love hearing about the unique experiences and memorable moments
+      visitors have had at the Alux Temple. Share your story, photos, or videos
+      with us and inspire others to explore this fascinating landmark.
     </p>
 
     <div class="flex flex-wrap space-x-4">
-      <a href="#" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded">
+      <a
+        href="#"
+        class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded"
+      >
         #AluxTemple
       </a>
-      <a href="#" class="bg-red-500 hover:bg-red-600 text-white font-semibold py-2 px-4 rounded">
+      <a
+        href="#"
+        class="bg-red-500 hover:bg-red-600 text-white font-semibold py-2 px-4 rounded"
+      >
         #VisitAlux
       </a>
-      <a href="#" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-4 rounded">
+      <a
+        href="#"
+        class="bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-4 rounded"
+      >
         #MayanCulture
       </a>
     </div>
 
     <div class="flex justify-center">
-      <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 rounded-full">
+      <button
+        class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 rounded-full"
+      >
         Share Your Story
       </button>
     </div>
