styles: class for height of sections and grid col 1 for exp component

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,7 +2,7 @@
 import "../styles/tailwind.css";
 ---
 
-<section id="experience" class="relative p-6 space-y-6">
+<section id="experience" class="relative p-6 space-y-6 h-screen-80">
   <div class="absolute inset-0 z-[-1]">
     <div
       class="w-full h-full bg-cover bg-center"
@@ -14,7 +14,7 @@ import "../styles/tailwind.css";
 
   <h2 class="text-3xl font-semibold text-white">The Alux Temple Experience</h2>
 
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+  <div class="grid grid-cols-1 gap-10 p-6">
     <div>
       <h3 class="text-xl font-semibold text-white">
         Atmosphere & Architecture
