--- a/src/components/AluxInfo.astro
+++ b/src/components/AluxInfo.astro
@@ -1,4 +1,4 @@
-<article id="alux-info" class="relative p-6 space-y-6">
+<article id="alux-info" class="relative p-6 space-y-6 h-screen-80">
   <div class="absolute inset-0 z-[-1]">
     <div
       class="w-full h-full bg-cover bg-center"
