--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/tailwind.css';
+import "../styles/global.css"
 import Header from '../components/Header.astro';
 import AluxInfo from '../components/AluxInfo.astro';
 import Experience from '../components/Experience.astro';
