--- a/src/components/AluxInfo.astro
+++ b/src/components/AluxInfo.astro
@@ -1,3 +1,6 @@
+---
+import { Image } from '@astrojs/image/components';
+---
 <article id="alux-info" class="relative p-6 space-y-6 h-screen-80">
   <div class="absolute inset-0 z-[-1]">
     <div
