--- a/src/components/AluxInfo.astro
+++ b/src/components/AluxInfo.astro
@@ -1,6 +1,7 @@
 ---
-import { Image } from '@astrojs/image/components';
+import {Image} from "@astrojs/image/components";
 ---
+
 <article id="alux-info" class="relative p-6 space-y-6 h-screen-80">
   <div class="absolute inset-0 z-[-1]">
     <div
@@ -13,8 +14,17 @@ import { Image } from '@astrojs/image/components';
 
   <h2 class="text-3xl font-semibold text-white">Aluxes in Mayan Folklore</h2>
 
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <div class="flex flex-col content-center justify-center ">
+  <div class="p-5 containerOne">
+    <div>
+      <Image
+        width={420}
+        height={420}
+        src="/images/alux-image.jpeg"
+        alt="Alux Illustration"
+        class="aspect-square"
+      />
+    </div>
+    <div class="flex flex-col content-center justify-center">
       <p class="text-white">
         Aluxes are mythical creatures from the Mayan folklore of the Yucatan
         Peninsula, particularly in Mexico. They are small, impish beings often
@@ -31,15 +41,8 @@ import { Image } from '@astrojs/image/components';
         misfortune.
       </p>
     </div>
-    <div>
-      <img
-        src="/images/alux-image.jpeg"
-        alt="Alux Illustration"
-        class="aspect-square"
-      />
-    </div>
   </div>
-<!-- 
+  <!-- 
   <div class="aspect-w-16 aspect-h-9">
     <iframe
       src="https://www.youtube.com/embed/your-video-id"
@@ -47,3 +50,12 @@ import { Image } from '@astrojs/image/components';
       allowfullscreen></iframe>
   </div> -->
 </article>
+
+<style>
+  .containerOne {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+</style>
