feat: some mobile-first styles

--- a/src/components/AluxInfo.astro
+++ b/src/components/AluxInfo.astro
@@ -24,7 +24,7 @@ import {Image} from "@astrojs/image/components";
         class="aspect-square"
       />
     </div>
-    <div class="flex flex-col content-center justify-center">
+    <div class="flex flex-col content-center justify-center text-xl">
       <p class="text-white">
         Aluxes are mythical creatures from the Mayan folklore of the Yucatan
         Peninsula, particularly in Mexico. They are small, impish beings often
@@ -57,5 +57,7 @@ import {Image} from "@astrojs/image/components";
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-block-start: 100px;
+    gap: 50px;
   }
 </style>
