--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,20 +24,20 @@ import "../styles/tailwind.css";
   <nav class="hidden md:block">
     <ul class="flex items-center space-x-4">
       <li>
-        <a href="#alux-info" class="text-white hover:text-gray-300">Aluxes</a>
+        <a href="#alux-info" class="text-white hover:text-gray-300 text-xl">Aluxes</a>
       </li>
       <li>
-        <a href="#experience" class="text-white hover:text-gray-300"
+        <a href="#experience" class="text-white hover:text-gray-300 text-xl"
           >Experience</a
         >
       </li>
       <li>
-        <a href="#practical-info" class="text-white hover:text-gray-300"
+        <a href="#practical-info" class="text-white hover:text-gray-300 text-xl"
           >Practical Info</a
         >
       </li>
       <li>
-        <a href="#share-experience" class="text-white hover:text-gray-300"
+        <a href="#share-experience" class="text-white hover:text-gray-300 text-xl"
           >Share</a
         >
       </li>
