--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,7 +2,7 @@
 import "../styles/tailwind.css";
 ---
 
-<section id="experience" class="relative p-6 space-y-6 h-screen-80">
+<section id="experience" class="text-xl relative p-6 space-y-6 h-screen-80">
   <div class="absolute inset-0 z-[-1]">
     <div
       class="w-full h-full bg-cover bg-center"
