--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -6,13 +6,19 @@ import AluxInfo from '../components/AluxInfo.astro';
 import Experience from '../components/Experience.astro';
 import PracticalInfo from '../components/PracticalInfo.astro';
 import SocialSharing from '../components/SocialSharing.astro';
+import CookieConsent from '../components/CookieConsent.jsx';
+
 ---
 
 
 <Header />
+<CookieConsent client:load />
+
 <main>
   <AluxInfo />
   <Experience />
   <PracticalInfo />
   <SocialSharing />
+
 </main>
+ 
